Update from curriculum repo

--- a/module-1/lesson-3/Financial_Data_Module_1_Lesson_3.ipynb
+++ b/module-1/lesson-3/Financial_Data_Module_1_Lesson_3.ipynb
@@ -45,7 +45,7 @@
     "id": "EXJp9Fzq_z7v"
    },
    "source": [
-    "*The previous lesson outlined the types of data for the major asset classes, stocks and bonds, and categorized different types of structured and unstructured data. It concluded by addressing 10 questions you can ask about your data. In this next lesson, we examine some of the real-world issues facing financial data: its sources, identifiers, timestamps and trading days, and other complexities.*"
+    "*The previous lesson outlined the types of data for the major asset classes, stocks and bonds, and categorized different types of structured and unstructured data. It concluded by addressing 10 questions you can ask about your data. In this next lesson, we examine some of the real-world issues facing financial data: its sources, identifiers, timestamps and trading days, and other complexities.*<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
   {
@@ -314,7 +314,7 @@
    "source": [
     "**References**\n",
     "\n",
-    "* Boutin, Chard. \"Stock Performance Tied to Ease of Pronouncing Company’s Name.\"\n",
+    "* Boutin, Chard. \"Stock Performance Tied to Ease of Pronouncing Company's Name.\"\n",
     "https://www.princeton.edu/news/2006/05/29/study-stock-performance-tied-ease-pronouncing-companys-name\n",
     "\n",
     "* [CBS News]. \"Stock Trade Typo Costs Firm $225M.\" December 9, 2005.\n",
