--- a/module-2/lesson-1/Financial_Data_Module_2_Lesson_1.ipynb
+++ b/module-2/lesson-1/Financial_Data_Module_2_Lesson_1.ipynb
@@ -36,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*For the first lesson of this module, we will recap some of the concepts you learned during the Financial Markets class. We will examine stocks, bonds, and cryptocurrency prices during this lesson. Finally, we will also demonstrate how to pull price data from Python and do some basic price analysis of equities, Bitcoin, and bond data.*"
+    "*For the first lesson of this module, we will recap some of the concepts you learned during the Financial Markets class. We will examine stocks, bonds, and cryptocurrency prices during this lesson. Finally, we will also demonstrate how to pull price data from Python and do some basic price analysis of equities, Bitcoin, and bond data.*<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
   {
@@ -102,7 +102,7 @@
    "source": [
     "Right off the bat, we can see in Figure 1 that it was a smart idea to take a look at this data first. Can you guess why we have null values here?\n",
     "\n",
-    "The answer is simple—equities only trade Monday through Friday, which means there’s no price data available on the weekends. Bitcoin does not have this same characteristic as it trades seven days a week, which is why 2016-11-19 and 2016-11-20 are populated in this case. "
+    "The answer is simple—equities only trade Monday through Friday, which means there's no price data available on the weekends. Bitcoin does not have this same characteristic as it trades seven days a week, which is why 2016-11-19 and 2016-11-20 are populated in this case. "
    ]
   },
   {
@@ -166,7 +166,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The above code and chart demonstrate how we can easily pass in a date range to the plot method in order to chart a subset of the data. If no date range is supplied, by default, the plot will encapsulate the entire data set. Once again, the following chart illustrates why using price alone is not ideal for comparing two assets. The scale of Bitcoin’s price versus a low-price stock like Ford makes it very hard to compare the two when deciding which stock is better to invest in.\n",
+    "The above code and chart demonstrate how we can easily pass in a date range to the plot method in order to chart a subset of the data. If no date range is supplied, by default, the plot will encapsulate the entire data set. Once again, the following chart illustrates why using price alone is not ideal for comparing two assets. The scale of Bitcoin's price versus a low-price stock like Ford makes it very hard to compare the two when deciding which stock is better to invest in.\n",
     "\n"
    ]
   },
@@ -175,14 +175,14 @@
    "metadata": {},
    "source": [
     "## 2. Calculating Return on Investment\n",
-    "If we invested \\\\$1,000 into each of these assets five years ago, how much money would we have today? To answer this question, we first need to determine how many shares of each stock we could buy with \\\\$1,000 at the start of our date range. For the purposes of this exercise, we will use 11/21/2016 as our starting point because it’s the first weekday of our data set. \n",
+    "If we invested \\\\$1,000 into each of these assets five years ago, how much money would we have today? To answer this question, we first need to determine how many shares of each stock we could buy with \\\\$1,000 at the start of our date range. For the purposes of this exercise, we will use 11/21/2016 as our starting point because it's the first weekday of our data set. \n",
     "\n",
     "From our data above, we can see the starting prices of AMZN, F, and Bitcoin were \\\\$780, \\\\$8.706, and \\\\$739.248 respectively. Now, we need to divide \\\\$1,000 by each of these numbers to see how many shares we will have:\n",
     "\n",
     "AMZN = 1000/780 = 1.282 shares\n",
     "F = 1000/8.706 = 114.863 shares\n",
     "Bitcoin = 1000/739.248 = 1.353 shares\n",
-    "It’s a relatively recent phenomenon that retail brokers offer fractional shares, but this tends to be the case nowadays for most commonly used brokers. For this exercise, we will assume we can have fractional shares.\n",
+    "It's a relatively recent phenomenon that retail brokers offer fractional shares, but this tends to be the case nowadays for most commonly used brokers. For this exercise, we will assume we can have fractional shares.\n",
     "\n",
     "Now, to determine how much money we would have today, we look at the most recent date in our data set (11/18/2021), get the prices of each asset, and multiply our number of shares by this number. We can find this by looking at the bottom of our data set in Figure 4 using the *tail()* method:"
    ]
@@ -233,7 +233,7 @@
     "- F = (2046.86 - 1000)/1000 = 1.0469 = 104.69%\n",
     "- Bitcoin = (77042.72 - 1000)/1000 = 76.04272 = 7,604.27%\n",
     "\n",
-    "Bitcoin’s return here is off the charts compared to the other two assets. Bitcoin is a relatively new—some would even say riskier—asset than the other two. Higher risk equals higher potential for rewards, and thus far, investing in Bitcoin has paid off handsomely. "
+    "Bitcoin's return here is off the charts compared to the other two assets. Bitcoin is a relatively new—some would even say riskier—asset than the other two. Higher risk equals higher potential for rewards, and thus far, investing in Bitcoin has paid off handsomely. "
    ]
   },
   {
@@ -341,17 +341,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can run the same analysis on BLV as we did on the above stocks to get the total simple return over a five-year period using a slightly different method. This time, we’ll calculate the simple return and then just multiply that number by 1+ `returnRate`. \n",
+    "We can run the same analysis on BLV as we did on the above stocks to get the total simple return over a five-year period using a slightly different method. This time, we'll calculate the simple return and then just multiply that number by 1+ `returnRate`. \n",
     "\n",
     "BLV 5 year return = (97.98-68.9)/68.9 = 0.422061 = 42.21%\n",
     "\n",
-    "If we started with \\\\$1,000, after five years, we would’ve ended up with (1+0.422061) * 1000 = \\\\$1,422.06.\n",
+    "If we started with \\\\$1,000, after five years, we would've ended up with (1+0.422061) * 1000 = \\\\$1,422.06.\n",
     "\n",
-    "While this is still a positive return, it’s a much lower return than what we would’ve gotten with Ford, Amazon, or Bitcoin. This is to be expected for the most part as bonds return a quarterly/annual coupon along with returning the principal. For this reason, bonds (especially government bonds) are considered safer assets than stocks or cryptocurrencies. One major thing to consider is if a company goes bankrupt, you may not get your principal back in a bond. That being said, the same goes for stocks. Bondholders also have less credit risk than stockholders: If you own a bond in Ford and your friend owns Ford stock, but Ford declares bankruptcy tomorrow, the bondholder will be paid off first in the bankruptcy proceedings and the equity owner will only get what’s left over, making bonds a safer investment. \n",
+    "While this is still a positive return, it's a much lower return than what we would've gotten with Ford, Amazon, or Bitcoin. This is to be expected for the most part as bonds return a quarterly/annual coupon along with returning the principal. For this reason, bonds (especially government bonds) are considered safer assets than stocks or cryptocurrencies. One major thing to consider is if a company goes bankrupt, you may not get your principal back in a bond. That being said, the same goes for stocks. Bondholders also have less credit risk than stockholders: If you own a bond in Ford and your friend owns Ford stock, but Ford declares bankruptcy tomorrow, the bondholder will be paid off first in the bankruptcy proceedings and the equity owner will only get what's left over, making bonds a safer investment. \n",
     "\n",
     "The downside to this is that it's hard to achieve the level of total returns that a stock or cryptocurrency can achieve with a bond. There is a risk-reward tradeoff. Think back to the reading in this lesson for a moment. What we just discussed here is mentioned in the reading comparing a high-variance investment to a low-variance investment. What you choose is entirely up to your risk preferences. Always take into consideration the risk-reward tradeoff.\n",
     "\n",
-    "Most investors hold a mix of stocks/cryptocurrencies and bonds. A rule of thumb that’s commonly used to determine this mix is to subtract your age from 100; the resulting number is the percentage of assets that should be in risky assets, like stocks. In other words, a 26-year-old should be putting (100-26) = 74% of their assets in stocks and 26% in bonds. The reason for this is that, while you’re young, you have more time to wait out the potential down cycles in a market so you can be riskier with your money.\n",
+    "Most investors hold a mix of stocks/cryptocurrencies and bonds. A rule of thumb that's commonly used to determine this mix is to subtract your age from 100; the resulting number is the percentage of assets that should be in risky assets, like stocks. In other words, a 26-year-old should be putting (100-26) = 74% of their assets in stocks and 26% in bonds. The reason for this is that, while you're young, you have more time to wait out the potential down cycles in a market so you can be riskier with your money.\n",
     "\n",
     "In this next video, we'll go over some Python DataFrame tricks to transform data more easily along with showing how to calculate returns and visualize the data for easy comparison."
    ]
@@ -387,7 +387,7 @@
    "source": [
     "**References**\n",
     "\n",
-    "- “BLV Long-Term Bond ETF.” *Vanguard*, https://institutional.vanguard.com/investments/product-details/fund/0927"
+    "- \"BLV Long-Term Bond ETF.\" *Vanguard*, https://institutional.vanguard.com/investments/product-details/fund/0927"
    ]
   },
   {
