--- a/module-2/lesson-2/Financial_Data_Module_2_Lesson_2.ipynb
+++ b/module-2/lesson-2/Financial_Data_Module_2_Lesson_2.ipynb
@@ -81,7 +81,7 @@
     "\n",
     "The Russell 2000 Index will be used as our proxy for small-cap companies.\n",
     "\n",
-    "One way to compare two investment opportunities is to determine the future value of an investment. There are always risks and many assumptions that need to be made when determining future value, especially for a risky investment like a stock. We will begin by using the average daily rate of return of each index to determine expected return. This is a simple way of thinking because it’s impossible to say the next 10 years will be the same as the past 10 years, but it is a starting point when comparing investments. We will delve further into more advanced comparison metrics as the course goes on. \n",
+    "One way to compare two investment opportunities is to determine the future value of an investment. There are always risks and many assumptions that need to be made when determining future value, especially for a risky investment like a stock. We will begin by using the average daily rate of return of each index to determine expected return. This is a simple way of thinking because it's impossible to say the next 10 years will be the same as the past 10 years, but it is a starting point when comparing investments. We will delve further into more advanced comparison metrics as the course goes on. \n",
     "\n",
     "**The formula for compound interest is:**\n",
     "\n",
@@ -214,7 +214,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With our future value calculations, we’re predicting a \\\\$1,000 investment in the S&P 500 today would yield a \\\\$4,055.15 future value and for the Russell 2000 a \\\\$3,510.16 future value. \n",
+    "With our future value calculations, we're predicting a \\\\$1,000 investment in the S&P 500 today would yield a \\\\$4,055.15 future value and for the Russell 2000 a \\\\$3,510.16 future value. \n",
     "\n",
     "While future value is important when comparing investments, we also need to be concerned about how volatile these investment opportunities are. In the next section, we will discuss three different volatility metrics along with how to program them in Python."
    ]
@@ -261,7 +261,7 @@
    "source": [
     "While some may find this useful, we definitely need to improve upon this metric to make it more useful when comparing different investments. How do you think we can do this? Let's try out two ideas.\n",
     "\n",
-    "The first is changing the time frame slightly. Above, we’re looking at the last 10 years of data. Perhaps it will be more useful to analyze more recent data. For this, we will look at the same metric over the last year:"
+    "The first is changing the time frame slightly. Above, we're looking at the last 10 years of data. Perhaps it will be more useful to analyze more recent data. For this, we will look at the same metric over the last year:"
    ]
   },
   {
@@ -332,7 +332,7 @@
    "metadata": {},
    "source": [
     "#### 2.2.2 50-Day Rolling Distance \n",
-    "We can create a volatility metric here using this moving average. Let’s imagine we were taking the distance between the moving average line and each data point from the S&P 500 chart. We can use this as a proxy for volatility. We also would want to treat the negative differences the same as the positive differences; otherwise, they may cancel each other out. As such, we will use the absolute value of each point. We will divide these differences by the prices in order to standardize these values, and finally, we'll take the average of those values. This can be programmed in Python with this simple line:"
+    "We can create a volatility metric here using this moving average. Let's imagine we were taking the distance between the moving average line and each data point from the S&P 500 chart. We can use this as a proxy for volatility. We also would want to treat the negative differences the same as the positive differences; otherwise, they may cancel each other out. As such, we will use the absolute value of each point. We will divide these differences by the prices in order to standardize these values, and finally, we'll take the average of those values. This can be programmed in Python with this simple line:"
    ]
   },
   {
@@ -374,7 +374,7 @@
    "metadata": {},
    "source": [
     "### 2.3 Price Volatility: Standard Deviations\n",
-    "Standard deviation is potentially the most popular volatility metric used when looking at an investment opportunity. It’s as simple as calling the std() method on a DataFrame."
+    "Standard deviation is potentially the most popular volatility metric used when looking at an investment opportunity. It's as simple as calling the std() method on a DataFrame."
    ]
   },
   {
@@ -647,7 +647,7 @@
     "\n",
     "- Standard & Poor's. *S&P U.S. Indices Methodology*, Standard & Poor's, Nov. 2021, https://www.spglobal.com/spdji/en/documents/methodologies/methodology-sp-us-indices.pdf\n",
     "\n",
-    "- Maginn, John L. *Managing Investment Portfolios Workbook: A Dynamic Process*. John Wiley & Sons, Inc., 2007."
+    "- Maginn, John L. *Managing Investment Portfolios Workbook: A Dynamic Process*. John Wiley & Sons, Inc., 2007.<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
   {
