--- a/module-2/lesson-3/Financial_Data_Module_2_Lesson_3.ipynb
+++ b/module-2/lesson-3/Financial_Data_Module_2_Lesson_3.ipynb
@@ -176,7 +176,7 @@
    "metadata": {},
    "source": [
     "## 2. Variance and Standard Deviation \n",
-    "Investors have to keep volatility in mind as well when choosing an investment. For example, a pension fund may need to be extra careful with its money and will want to ensure they aren’t getting into any extremely volatile investments. There are also hedge funds, which short stocks and even trade volatility with options. As you can see, whether you’re risk-seeking or risk-averse, the volatility (risk) of an investment is something you should care about.   \n",
+    "Investors have to keep volatility in mind as well when choosing an investment. For example, a pension fund may need to be extra careful with its money and will want to ensure they aren't getting into any extremely volatile investments. There are also hedge funds, which short stocks and even trade volatility with options. As you can see, whether you're risk-seeking or risk-averse, the volatility (risk) of an investment is something you should care about.   \n",
     "\n",
     "A simple measure of volatility is the variance. Variance is used to see how far away each data point in a set is away from the mean. Variance is calculated with the following steps:\n",
     "\n",
@@ -245,7 +245,7 @@
     "\n",
     "Standard deviation is preferred over variance in most cases because variance is a squared result of the units of return. By taking the square root of this and thus obtaining standard deviation, the result is in the same unit as the underlying data, which in this case is returns. This makes it much easier to understand, intuitively.  \n",
     "\n",
-    "Keep in mind, a lower standard deviation is not necessarily preferable when considering investments. It all depends on the investor’s risk preferences. A higher risk means a higher potential for rewards. Understanding the investor’s perspective is key to determining what levels of risk an investor is comfortable with.  \n",
+    "Keep in mind, a lower standard deviation is not necessarily preferable when considering investments. It all depends on the investor's risk preferences. A higher risk means a higher potential for rewards. Understanding the investor's perspective is key to determining what levels of risk an investor is comfortable with.  \n",
     "\n",
     "In the first video of this lesson, we will compare different asset classes using standard deviation of returns."
    ]
@@ -289,7 +289,7 @@
     "Looking at the covariance matrix below for our three assets, we can see that these assets have a positive relationship with each other. It's hard to understand much more than that with these numbers, given that the units are not standardized. \n",
     "\n",
     "### 3.1 Using a Covariance Matrix\n",
-    "While covariance is useful for determining the direction of two variables jointly, we can turn to correlation for a more standardized version of this. For now, when discussing correlation, we will use the Pearson’s correlation coefficient. The other types of correlation will be discussed in a future lesson"
+    "While covariance is useful for determining the direction of two variables jointly, we can turn to correlation for a more standardized version of this. For now, when discussing correlation, we will use the Pearson's correlation coefficient. The other types of correlation will be discussed in a future lesson"
    ]
   },
   {
@@ -320,7 +320,7 @@
     "\n",
     "A benefit of correlation over covariance is that correlation is capped from –1 to 1 while covariance can be from –inf to inf. This makes covariance a harder statistic to understand intuitively. Correlation is also proportional, which will be shown in the video below.  \n",
     "\n",
-    "Keep in mind that a lot of models and financial concepts assume a constant correlation, but this is rarely the case. Correlation is changing over time and will likely even change if you adjust the time range from which you’re measuring correlation. \n",
+    "Keep in mind that a lot of models and financial concepts assume a constant correlation, but this is rarely the case. Correlation is changing over time and will likely even change if you adjust the time range from which you're measuring correlation. \n",
     "\n",
     "When comparing the correlations of the assets we've been using so far, you can see it paints a clearer picture than the covariance did."
    ]
@@ -361,7 +361,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This relationship shows nearly perfect correlation. "
+    "This relationship shows nearly perfect correlation. <span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
   {
@@ -430,9 +430,9 @@
     "\n",
     "$$\\text{Sharpe Ratio} = \\frac{R_p}{\\sigma_p}$$\n",
     "\n",
-    "Notice anything about the denominator? Yes, that’s right - we use the standard deviation here to represent risk.  \n",
+    "Notice anything about the denominator? Yes, that's right - we use the standard deviation here to represent risk.  \n",
     "\n",
-    "This measure is used as a way of scaling the return of an investment depending on how much risk is taken. In other words, the higher the standard deviation, the more the risk-weighted return is reduced. Let’s use the same example as above with S&P 500 and Bitcoin daily returns over the last five years.\n",
+    "This measure is used as a way of scaling the return of an investment depending on how much risk is taken. In other words, the higher the standard deviation, the more the risk-weighted return is reduced. Let's use the same example as above with S&P 500 and Bitcoin daily returns over the last five years.\n",
     "\n",
     "Average daily return of S&P 500 = 0.000543 = 5.43 bp\n",
     "\n",
@@ -481,7 +481,7 @@
    "metadata": {},
    "source": [
     "## 4. Semivariance \n",
-    "Semivariance, a.k.a. downside risk, is a more refined version of a standard deviation. Standard deviation looks at both the upside and downside risk of an investment. Most investors, unless you’re trading short, care much more about the downside risk than the upside risk. In other words, if you bought a stock and are looking at the Sharpe ratio, you wouldn’t want this number to be penalized for how far it moves to the upside. Most of the time, an investor will be much more concerned with the downside risk of a stock.  \n",
+    "Semivariance, a.k.a. downside risk, is a more refined version of a standard deviation. Standard deviation looks at both the upside and downside risk of an investment. Most investors, unless you're trading short, care much more about the downside risk than the upside risk. In other words, if you bought a stock and are looking at the Sharpe ratio, you wouldn't want this number to be penalized for how far it moves to the upside. Most of the time, an investor will be much more concerned with the downside risk of a stock.  \n",
     "\n",
     "$$\\text{Semivariance} = \\frac{1}{n} \\sum_{r_i < \\overline{r}}^{n} (r_i - \\overline{r})^2$$\n",
     "\n",
