--- a/module-2/lesson-4/Financial_Data_Module_2_Lesson_4.ipynb
+++ b/module-2/lesson-4/Financial_Data_Module_2_Lesson_4.ipynb
@@ -195,7 +195,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can use the `normaltest()` method here to determine if the sample data could fit a normal distribution. This method uses D’Agostino and Pearson’s normality test, which combines skew and kurtosis to produce an omnibus test of normality.\n",
+    "We can use the `normaltest()` method here to determine if the sample data could fit a normal distribution. This method uses D'Agostino and Pearson's normality test, which combines skew and kurtosis to produce an omnibus test of normality.\n",
     "\n",
     "The null hypothesis of this test is that the sample data fits a normal distribution. Let's assume we want to be 90% confident this data fits a normal distribution. We can compare this to the p-value to see if it's greater than 90%. In this case, the value, 2.43e-252, is extremely small, which leads us to reject the null hypothesis that this data fits a normal distribution."
    ]
@@ -223,7 +223,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The p value of our data here shows once and for all that there is virtually zero chance our sample data is normally distributed"
+    "The p value of our data here shows once and for all that there is virtually zero chance our sample data is normally distributed<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
   {
@@ -401,7 +401,7 @@
    "source": [
     "## 3. Non-Gaussian Distributions\n",
     "\n",
-    "One potential alternative distribution we could use to forecast stock returns is the Student's t-distribution. This is very similar to a normal distribution except it has heavier tails. Theoretically, this sounds perfect for daily returns based on what we’ve seen up to this point.\n",
+    "One potential alternative distribution we could use to forecast stock returns is the Student's t-distribution. This is very similar to a normal distribution except it has heavier tails. Theoretically, this sounds perfect for daily returns based on what we've seen up to this point.\n",
     "\n",
     "Since we have 5,031 data points, we have 5,030 degrees of freedom. We can plug these numbers right into `stats.t.rvs()` method to see a sample t-distribution and chart it:"
    ]
@@ -453,7 +453,7 @@
    "source": [
     "Here, we get a p-value of 0.836, which means we would reject the null hypothesis at a 95% confidence level that these values come from the same data as the sample. There are two main things to point out here:\n",
     "\n",
-    "* While the p-value is less than 0.95, it’s still not too far off, and it's magnitudes closer to being true than the normal distribution we showed before. This indicates that this distribution is much better to use when modeling daily returns than the normal distribution. \n",
+    "* While the p-value is less than 0.95, it's still not too far off, and it's magnitudes closer to being true than the normal distribution we showed before. This indicates that this distribution is much better to use when modeling daily returns than the normal distribution. \n",
     "* This p-value is highly reliant on the sample data we have here. Every time we run that cell, we get different sample data, which also means different p-values. "
    ]
   },
@@ -472,7 +472,7 @@
    "source": [
     "**References**\n",
     "\n",
-    "- D'Agostino, Ralph B. “An Omnibus Test of Normality for Moderate and Large Size Samples.” *Biometrika*, vol. 58, no. 2, 1971, pp. 341–348, https://doi.org/10.1093/biomet/58.2.341."
+    "- D'Agostino, Ralph B. \"An Omnibus Test of Normality for Moderate and Large Size Samples.\" *Biometrika*, vol. 58, no. 2, 1971, pp. 341–348, https://doi.org/10.1093/biomet/58.2.341."
    ]
   },
   {
