--- a/module-3/lesson-1/Financial_Data_Module_3_Lesson_1.ipynb
+++ b/module-3/lesson-1/Financial_Data_Module_3_Lesson_1.ipynb
@@ -99,7 +99,7 @@
    "metadata": {},
    "source": [
     "### 1.2 How to Calculate Return with a Basket of Assets\n",
-    "We’ve now gone over returns of a single asset many times during this course. It’s time to apply similar logic to a basket of multiple assets. This will once again be best illustrated with an example. The following calculations can easily be extended to n number of securities, but to keep it simple, we will use two for our example. For this, we need to make some basic assumptions:\n",
+    "We've now gone over returns of a single asset many times during this course. It's time to apply similar logic to a basket of multiple assets. This will once again be best illustrated with an example. The following calculations can easily be extended to n number of securities, but to keep it simple, we will use two for our example. For this, we need to make some basic assumptions:\n",
     "\n",
     "* 2 stocks\n",
     "    * Meta—We will refer to it as its previous name from here on out: Facebook (META) \n",
@@ -227,7 +227,7 @@
    "source": [
     "Our portfolio would have returned 291.49% over the last five years, assuming we invested in both assets on the same starting date and with our weights.\n",
     "\n",
-    "In the first video of this lesson, we show how to transition from calculating an individual security's returns to calculating the returns of a portfolio of assets."
+    "In the first video of this lesson, we show how to transition from calculating an individual security's returns to calculating the returns of a portfolio of assets.<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
   {
@@ -315,7 +315,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We determine that the annual variance of our portfolio is 8.80%. Let’s compare this to the variance of each individual asset.\n",
+    "We determine that the annual variance of our portfolio is 8.80%. Let's compare this to the variance of each individual asset.\n",
     "\n",
     "### 2.2 Comparing Portfolio Variance to Individual Stock Variance\n",
     "This shows the annual variance of a portfolio with META and CMG weighted 23% and 77% respectively has shown a 10.33% annual variance over the last five years.\n",
