--- a/module-3/lesson-3/Financial_Data_Module_3_Lesson_3.ipynb
+++ b/module-3/lesson-3/Financial_Data_Module_3_Lesson_3.ipynb
@@ -75,7 +75,7 @@
     "Let's explore these benefits in a bit more detail starting from the top.\n",
     "\n",
     "### 1.2 ETF Benefits: Diversification\n",
-    "Although you probably get the theme of these lessons by now, we will use a lesson to best illustrate the benefits of diversification through ETFs. Imagine the year is 2006 and your two friends Elaine and Jerry both conclude that banks and financial institutions will be fantastic long-term investments for the next 15+ years. Jerry is confident with his stock-picking skills, so he decides he's going to invest all of his money into a company he can't imagine in a million years could fail, Lehman Brothers. Elaine doesn't know as much about specific financial institutions and what to invest in, so she decides she will just invest her money into an ETF, XLF. XLF is the Financial Select Sector SPDR Fund; it contains exposure to the U.S. financials sector. It's cap-weighted, S&P 500-only portfolio, which means that it’s concentrated in large banks and avoids small-caps (XLF).\n",
+    "Although you probably get the theme of these lessons by now, we will use a lesson to best illustrate the benefits of diversification through ETFs. Imagine the year is 2006 and your two friends Elaine and Jerry both conclude that banks and financial institutions will be fantastic long-term investments for the next 15+ years. Jerry is confident with his stock-picking skills, so he decides he's going to invest all of his money into a company he can't imagine in a million years could fail, Lehman Brothers. Elaine doesn't know as much about specific financial institutions and what to invest in, so she decides she will just invest her money into an ETF, XLF. XLF is the Financial Select Sector SPDR Fund; it contains exposure to the U.S. financials sector. It's cap-weighted, S&P 500-only portfolio, which means that it's concentrated in large banks and avoids small-caps (XLF).\n",
     "\n",
     "If you had to guess, who do you think had better performance since the start of 2006? You can probably see where this is going. If you're unaware, Lehman Brothers famously collapsed in 2008 and filed for the largest bankruptcy in U.S. history. This means Jerry likely lost his entire initial investment.\n"
    ]
@@ -169,7 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By having the benefits of diversification through an ETF and by being patient, Elaine would've ended up with a 104.82% return since 2006. If she invested \\\\$10,000 dollars into the fund then while Jerry invested \\\\$10,000 into Lehman Brothers, he would be left with \\\\$0 while Elaine would be sitting on about $20,482. This is just one example of many illustrating the benefits of diversification through ETFs."
+    "By having the benefits of diversification through an ETF and by being patient, Elaine would've ended up with a 104.82% return since 2006. If she invested \\\\$10,000 dollars into the fund then while Jerry invested \\\\$10,000 into Lehman Brothers, he would be left with \\\\$0 while Elaine would be sitting on about $20,482. This is just one example of many illustrating the benefits of diversification through ETFs.<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
   {
