--- a/module-3/lesson-4/Financial_Data_Module_3_Lesson_4.ipynb
+++ b/module-3/lesson-4/Financial_Data_Module_3_Lesson_4.ipynb
@@ -90,7 +90,7 @@
    "source": [
     "## 2. Historical Method\n",
     "\n",
-    "This is probably the simplest and most intuitive method of calculating Value at Risk. In short, historical returns are sorted from lowest to highest on an asset or portfolio. Let’s say you wanted to calculate the daily Value at Risk on an equity with a 95% confidence interval. Assuming we can look at the last thousand days of data for this stock, we would take the daily returns and sort them from lowest to highest. From here, we would take the return from the 5th percentile of the data. In this case, with 1,000 days of data, it would be the 50th (0.05*1000) worst daily return from these thousand days. Let’s say the 50th worst day had a –4% return. From this, we can assume that the daily VaR for this stock with a 95% confidence interval is –4%. Building on that, if we were to invest \\$1,000 in said stock, we would expect the worst daily loss to be:\n",
+    "This is probably the simplest and most intuitive method of calculating Value at Risk. In short, historical returns are sorted from lowest to highest on an asset or portfolio. Let's say you wanted to calculate the daily Value at Risk on an equity with a 95% confidence interval. Assuming we can look at the last thousand days of data for this stock, we would take the daily returns and sort them from lowest to highest. From here, we would take the return from the 5th percentile of the data. In this case, with 1,000 days of data, it would be the 50th (0.05*1000) worst daily return from these thousand days. Let's say the 50th worst day had a –4% return. From this, we can assume that the daily VaR for this stock with a 95% confidence interval is –4%. Building on that, if we were to invest \\$1,000 in said stock, we would expect the worst daily loss to be:\n",
     "\n",
     "-0.04*1000 = -\\$40  with a 95% confidence interval\n",
     "\n",
@@ -98,7 +98,7 @@
     "\n",
     "* This method uses historical returns to measure VaR empirically, which means that there are no assumptions made about the distribution whereas many models assume the normal distribution.\n",
     "* Each day for this method is given equal weight, which means if there is a trend in the volatility, you could be overstating or understating the VaR depending on whether the volatility trend is down or up, respectively. One refinement to combat this could be to place greater weight on more recent data.\n",
-    "* Past data does not necessarily indicate what will happen in the future. While the other methods also rely on historical data to a certain extent, this method is solely derived from past historical returns. There are many unforeseen events that can happen, which can change the course of a stock’s trajectory and cause the stock to trade differently than it did in the past.\n",
+    "* Past data does not necessarily indicate what will happen in the future. While the other methods also rely on historical data to a certain extent, this method is solely derived from past historical returns. There are many unforeseen events that can happen, which can change the course of a stock's trajectory and cause the stock to trade differently than it did in the past.\n",
     "\n"
    ]
   },
@@ -435,7 +435,8 @@
     "\n",
     "### 4.2 Implementing VaR - Parametric Method with T-distribution\n",
     "We just need to define our degrees of freedom for this method, but besides that, we can plug in the same parameters from above into the t-distribution function. We will use four degrees of freedom in this case. The higher you make the degrees of freedom, the more conservative VaR estimate you will have.\n",
-    "\n"
+    "\n",
+    "<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
   {
@@ -492,13 +493,13 @@
    "source": [
     "## 5. Monte Carlo Simulation\n",
     "\n",
-    "This method runs a series of simulations, usually in the thousands, where each return stream is represented as a random variable. This variable can be taken from any probability distribution, which is great because that means it doesn’t necessarily assume the normal distribution. There is a lot of flexibility in choosing what kind of distribution to use. All the variables are then dollar-weighted and simulated to see what the total portfolio value is at the end of each run. These simulation returns are then sorted lowest to highest, and we can easily look to see what the Value at Risk is using similar computations to the historical method, except this time, we’re using simulated returns instead of historical returns. For example, if you ran a series of 1,000 simulations, you would look at the 50th lowest value to determine the VaR for a 95% confidence interval.\n",
+    "This method runs a series of simulations, usually in the thousands, where each return stream is represented as a random variable. This variable can be taken from any probability distribution, which is great because that means it doesn't necessarily assume the normal distribution. There is a lot of flexibility in choosing what kind of distribution to use. All the variables are then dollar-weighted and simulated to see what the total portfolio value is at the end of each run. These simulation returns are then sorted lowest to highest, and we can easily look to see what the Value at Risk is using similar computations to the historical method, except this time, we're using simulated returns instead of historical returns. For example, if you ran a series of 1,000 simulations, you would look at the 50th lowest value to determine the VaR for a 95% confidence interval.\n",
     "\n",
     "\n",
     "\n",
     "Considerations for this method:\n",
     "* Estimations will not be effective if the probability distributions used to determine the random variables are incorrect. Many use past data to get an idea of what the probability distribution should be; this method at least allows some subjectivity to doing this.\n",
-    "* You can estimate VaR more effectively for portfolios containing options with this method versus the parametric method since Monte Carlo doesn’t assume a normal distribution of returns.\n",
+    "* You can estimate VaR more effectively for portfolios containing options with this method versus the parametric method since Monte Carlo doesn't assume a normal distribution of returns.\n",
     "\n",
     "\n",
     "## 6. Conclusion\n",
