--- a/module-4/lesson-1/Financial_Data_Module_4_Lesson_1.ipynb
+++ b/module-4/lesson-1/Financial_Data_Module_4_Lesson_1.ipynb
@@ -610,7 +610,7 @@
    },
    "source": [
     "Notice the position is unprofitable unless the price moves about \\$4.58 in either direction.\n",
-    "Option strategies that involve buying two options mean that the position has to cover the cost of two premiums."
+    "Option strategies that involve buying two options mean that the position has to cover the cost of two premiums.<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
   {
