--- a/module-4/lesson-2/Financial_Data_Module_4_Lesson_2.ipynb
+++ b/module-4/lesson-2/Financial_Data_Module_4_Lesson_2.ipynb
@@ -36,7 +36,8 @@
     "|**Keywords** |Option Dependencies, Early Exercise, Stochastic Dominance   |\n",
     "\n",
     "\n",
-    "---\n"
+    "---\n",
+    "<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
   {
