--- a/module-4/lesson-3/FD_Module_4_Lesson_3.ipynb
+++ b/module-4/lesson-3/FD_Module_4_Lesson_3.ipynb
@@ -911,7 +911,7 @@
     "id": "S_50beQZ8L0s"
    },
    "source": [
-    "Let's compute the bid-ask spread."
+    "Let's compute the bid-ask spread.<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
   {
