--- a/module-4/lesson-4/Financial_Data_Module_4_Lesson_4.ipynb
+++ b/module-4/lesson-4/Financial_Data_Module_4_Lesson_4.ipynb
@@ -517,7 +517,7 @@
    },
    "source": [
     "In this strategy, we buy a call option at 340 and sell one at 350.\n",
-    "Let's price these options."
+    "Let's price these options.<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
   {
