--- a/module-5/lesson-1/Financial_Data_Module_5_Lesson_1.ipynb
+++ b/module-5/lesson-1/Financial_Data_Module_5_Lesson_1.ipynb
@@ -63,9 +63,9 @@
     "\n",
     "As we discussed in the Financial Markets course, the probability of default is the probability that a bond issuer will not meet its contractual obligations on schedule. Although the most common event of default is nonpayment leading to bankruptcy proceedings, the bond prospectus might identify other events of default, such as the failure to meet a different obligation or the violation of a financial covenant.\n",
     "\n",
-    "In the following example, we will determine the probability of default given corporate bond prices. The default probabilities that are reached in this exercise are called market-implied default probabilities. Historically, practitioners have focused on the one-year probability of default calculation. Over shorter horizons of one or two years, firms are exposed to the business cycle effect, while over longer horizons, the business cycle effect tends to have a lesser impact and the company’s capital structure becomes more important. This effect has made long-run risk levels less cyclical and more stable. Intuitively, default risk over a longer time period is less sensitive to the instantaneous default rates in the economy (Beygi 3). For this reason, we will focus on corporate bonds with one or two years until maturity to calculate the market-implied default probabilities.\n",
+    "In the following example, we will determine the probability of default given corporate bond prices. The default probabilities that are reached in this exercise are called market-implied default probabilities. Historically, practitioners have focused on the one-year probability of default calculation. Over shorter horizons of one or two years, firms are exposed to the business cycle effect, while over longer horizons, the business cycle effect tends to have a lesser impact and the company's capital structure becomes more important. This effect has made long-run risk levels less cyclical and more stable. Intuitively, default risk over a longer time period is less sensitive to the instantaneous default rates in the economy (Beygi 3). For this reason, we will focus on corporate bonds with one or two years until maturity to calculate the market-implied default probabilities.\n",
     "\n",
-    "We will verify the accuracy of the market-implied default probabilities with the Standard & Poor’s \"Average One-Year Transition Rates For Global Corporates\" table, which uses historical data from 1981-2019. This transition matrix shows the observed historical probabilities of a particular rating transitioning to another rating, including default, over the course of one year.\n",
+    "We will verify the accuracy of the market-implied default probabilities with the Standard & Poor's \"Average One-Year Transition Rates For Global Corporates\" table, which uses historical data from 1981-2019. This transition matrix shows the observed historical probabilities of a particular rating transitioning to another rating, including default, over the course of one year.\n",
     "\n",
     "In order to calculate the market-implied default probabilities, we must first acquire the company's current bond prices. Using a short Selenium script that emulates a user's keystrokes and clicks in a browser as a means of navigating to Trade Reporting and Compliance Engine (TRACE) bond data provided by the Financial Industry Regulatory Authority (FINRA), we can access the data needed to calculate the market-implied default probabilities.\n",
     "\n",
@@ -78,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Note:** The code in this lesson is adapted to work correctly in Selenium package version 4.2.0. Thus we advise to install specific version by running `!pip install selenium==4.2.0 --force-reinstall` command before proceeding with the rest of this module."
+    "**Note:** The code in this lesson is adapted to work correctly in Selenium package version 4.2.0. Thus we advise to install specific version by running `!pip install selenium==4.2.0 --force-reinstall` command before proceeding with the rest of this module.<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
   {
@@ -374,7 +374,7 @@
     "\n",
     "* van Gulik, Eltjo. \"Basic website performance testing with Python and Selenium.\" 19 Mar 2021. https://www.go-euc.com/basic-website-performance-testing/\n",
     "\n",
-    "* Beygi, Sajjad et al. “Features of a Lifetime PD Model: Evidence from Public, Private, and Rated Firms.” Moody’s Analytics, May 2018.\n",
+    "* Beygi, Sajjad et al. \"Features of a Lifetime PD Model: Evidence from Public, Private, and Rated Firms.\" Moody's Analytics, May 2018.\n",
     "\n",
     "* The  code and related documentation used in this lesson is adapted from: <br>**Hugh Donnelly, CFA**<br>*AlphaWave Data* <br> **March 2021** under the following  MIT License:\n",
     "\n",
