--- a/module-5/lesson-2/Financial_Data_Module_5_Lesson_2.ipynb
+++ b/module-5/lesson-2/Financial_Data_Module_5_Lesson_2.ipynb
@@ -339,14 +339,14 @@
    },
    "source": [
     "## 3. The Market Risk Premium and the Expected Risk Premium\n",
-    "After the expected cash flows are calculated, they are discounted back to period 0 at a risk-adjusted discount rate ($d$) to calculate the bond’s price. A risk-adjusted discount rate is the rate obtained by combining an expected risk premium with the risk-free rate during the calculation of the present value of a risky investment.\n",
+    "After the expected cash flows are calculated, they are discounted back to period 0 at a risk-adjusted discount rate ($d$) to calculate the bond's price. A risk-adjusted discount rate is the rate obtained by combining an expected risk premium with the risk-free rate during the calculation of the present value of a risky investment.\n",
     "\n",
     "**_Risk-adjusted Discount Rate = Risk-free Interest Rate + Expected Risk Premium_**\n",
     "\n",
     "\n",
     "We use the (risk-adjusted) discount rate in order to account for the liquidity, maturity, and tax considerations that cause corporate bonds to have an observed spread over the yield on a risk-free bond like the bonds issued by the government in a stable economy. (We grouped all of these factors together under the term \"credit spread\" in the Financial Markets course.) The minimum required return expected for a bond investor is equal to the sum of the following, which accounts for this spread between corporate bonds and risk-free bonds:\n",
     "\n",
-    "* **Default Risk Premium** – Compensates investors for the business’ likelihood of default.\n",
+    "* **Default Risk Premium** – Compensates investors for the business' likelihood of default.\n",
     "* **Liquidity Premium** – Compensates investors for investing in less liquid securities such as bonds. Government bonds typically are more liquid than corporate bonds. Government bonds are available in greater supply than even the most liquid corporates and have demand from a wider set of institutional investors. In addition, government bonds can be used more readily as collateral in repo transactions and for centrally cleared derivatives.\n",
     "* **Maturity Premium** – Compensates investors for the risk associated with bonds that mature many years into the future, which inherently carry more risk.\n",
     "* **Taxation Premium** – Compensates investors for the taxable income that bonds generate. Interest income on U.S. corporate bonds is taxable by both the federal and state governments. Government debt, however, is exempt from taxes at the state level.\n",
@@ -482,7 +482,7 @@
     "In this step, we will use a one-year risk-free rate so that the expected risk premium matches the duration we want for the risk-adjusted discount rate. We accomplish this by taking the yield on the very liquid 10-year U.S. Treasury note and raising it to the power of 1/10 in order to convert the yield to a one-year equivalent.\n",
     "\n",
     "Note that `2**3` is Pythonic for $2^3$, or 2 raised to the power of 3 (= 8).\n",
-    "By the same token, `8**(1/3)` is the cube root of 8 (=2)."
+    "By the same token, `8**(1/3)` is the cube root of 8 (=2).<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
   {
@@ -617,7 +617,7 @@
    "source": [
     "\n",
     "\n",
-    "Note that `.corr()` above can be used to calculate any of the three correlation metrics we have discussed, taking the arguments ‘pearson’, ‘kendall’, or ‘spearman’ (with 'pearson' as the default).\n",
+    "Note that `.corr()` above can be used to calculate any of the three correlation metrics we have discussed, taking the arguments 'pearson', 'kendall', or 'spearman' (with 'pearson' as the default).\n",
     "We include the argument here to emphasize this fact."
    ]
   },
