--- a/module-5/lesson-3/Financial_Data_Module_5_Lesson_3.ipynb
+++ b/module-5/lesson-3/Financial_Data_Module_5_Lesson_3.ipynb
@@ -631,7 +631,8 @@
    },
    "source": [
     "\n",
-    "Understand all of the code above: how the function works, how the methods work (here and in general).  Also, see the required reading section \"A.7.5 Solving Equations Symbolically\" and \"A.7.6. Symbolic Plotting\" from the following website, [which shows you how powerful and easy to use the `SymPy` library is.](https://numericalmethodssullivan.github.io/ch-python.html#solving-equations-symbolically)\n"
+    "Understand all of the code above: how the function works, how the methods work (here and in general).  Also, see the required reading section \"A.7.5 Solving Equations Symbolically\" and \"A.7.6. Symbolic Plotting\" from the following website, [which shows you how powerful and easy to use the `SymPy` library is.](https://numericalmethodssullivan.github.io/ch-python.html#solving-equations-symbolically)\n",
+    "<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
   {
