--- a/module-6/lesson-1/Financial_Data_Module_6_Lesson_1.ipynb
+++ b/module-6/lesson-1/Financial_Data_Module_6_Lesson_1.ipynb
@@ -90,6 +90,7 @@
    "outputs": [],
    "source": [
     "from IPython.display import VimeoVideo\n",
+    "\n",
     "VimeoVideo(\"714293481\", h=\"e42c792a9e\", width=600)"
    ]
   },
@@ -173,11 +174,11 @@
    },
    "outputs": [],
    "source": [
+    "from datetime import datetime, timezone\n",
+    "\n",
     "import nltk\n",
     "import pandas as pd\n",
     "import plotly.express as px\n",
-    "\n",
-    "from datetime import datetime, timezone\n",
     "from nrclex import NRCLex\n",
     "from twarc import Twarc2\n",
     "from twarc_csv import DataFrameConverter\n",
@@ -194,7 +195,7 @@
    "outputs": [],
    "source": [
     "# Replace the Xs with your new bearer token from the Twitter development site.\n",
-    "Bearer_Token = \"XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX\"  "
+    "Bearer_Token = \"XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX\""
    ]
   },
   {
@@ -266,7 +267,7 @@
     "query = \"AAPL lang:en\"\n",
     "\n",
     "# Specify the start and end times in UTC for the time period you want Tweets from\n",
-    "''' These dates and times must be within the past week! '''\n",
+    "\"\"\" These dates and times must be within the past week! \"\"\"\n",
     "start_time = datetime(2022, 4, 20, 0, 0, 0, 0, timezone.utc)\n",
     "end_time = datetime(2022, 4, 20, 1, 0, 0, 0, timezone.utc)\n",
     "\n",
@@ -348,7 +349,7 @@
    "source": [
     "In this lesson, we learned how to download actual tweets and related data from Twitter.com. In order to do this, we needed developer credentials from Twitter to use in the Twitter API. Because tweets (like much of the data we will encounter as data scientists and financial engineers) are stored as JSON objects, we needed to thoroughly understand the JSON syntax and related methods.\n",
     "\n",
-    "Then, we focused our tweet search on companies that we were interested in by supplying the company name as a search term. Given the potential volume of tweets, we did not consider reading them; instead, we used a sentiment analysis library to show us the frequency of basic emotions in order to gauge how Twitter users (which potentially include investors, customers, etc.) feel about the company. We assumed that these feelings might help us indicate how, say, the stock will perform in the near future. We also read about a more thorough and technical approach, which includes tokenizing, normalizing, and denoising the text data before using a Naive Bayes Classifier model to determine which words (and/or emoticons) are most informative about whether a tweet is emotionally positive or negative."
+    "Then, we focused our tweet search on companies that we were interested in by supplying the company name as a search term. Given the potential volume of tweets, we did not consider reading them; instead, we used a sentiment analysis library to show us the frequency of basic emotions in order to gauge how Twitter users (which potentially include investors, customers, etc.) feel about the company. We assumed that these feelings might help us indicate how, say, the stock will perform in the near future. We also read about a more thorough and technical approach, which includes tokenizing, normalizing, and denoising the text data before using a Naive Bayes Classifier model to determine which words (and/or emoticons) are most informative about whether a tweet is emotionally positive or negative.<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
   {
