--- a/module-6/lesson-2/Financial_Data_Module_6_Lesson_2.ipynb
+++ b/module-6/lesson-2/Financial_Data_Module_6_Lesson_2.ipynb
@@ -532,7 +532,7 @@
    },
    "source": [
     "Now we can look at the correlations among these currencies. \n",
-    "We will compute the correlations using three different methods: pearson, spearman, and kendall."
+    "We will compute the correlations using three different methods: pearson, spearman, and kendall.<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
   {
