--- a/module-6/lesson-3/Financial_Data_Module_6_Lesson_3.ipynb
+++ b/module-6/lesson-3/Financial_Data_Module_6_Lesson_3.ipynb
@@ -481,7 +481,8 @@
     "id": "611tMyCEVrSi"
    },
    "source": [
-    "As you read through the code above, make sure you understand how the code works and how to use the built-in functions. For example, [see this required reading](https://www.w3resource.com/python/built-in-function/enumerate.php) to ensure you are familiar with the built-in function \"enumerate.\n"
+    "As you read through the code above, make sure you understand how the code works and how to use the built-in functions. For example, [see this required reading](https://www.w3resource.com/python/built-in-function/enumerate.php) to ensure you are familiar with the built-in function \"enumerate.\n",
+    "<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
   {
