--- a/module-6/lesson-4/Financial_Data_Module_6_Lesson_4.ipynb
+++ b/module-6/lesson-4/Financial_Data_Module_6_Lesson_4.ipynb
@@ -71,7 +71,7 @@
    "outputs": [],
    "source": [
     "# Paste your API key from https://www.alphavantage.co/support/#api-key between the quotes\n",
-    "api_key = \"XXXXXXXXXXXXXXXX\"  "
+    "api_key = \"XXXXXXXXXXXXXXXX\""
    ]
   },
   {
@@ -82,7 +82,7 @@
    "source": [
     "Now you can use any of the specific data sets listed below (OVERVIEW, EARNINGS, CASH_FLOW, BALANCE_SHEET, INCOME_STATEMENT) to find the financial statement information or fundamental analysis metric of interest. By default, the data set is set to \"OVERVIEW\" which already includes several of the ratios you will be reading about. With access to the financial statements as provided below, you can also calculate many more financial ratios.\n",
     "\n",
-    "Set the \"ticker\" to the ticker of your choice. Explore [the other data fields](https://www.alphavantage.co/documentation/#balance-sheet) available to you."
+    "Set the \"ticker\" to the ticker of your choice. Explore [the other data fields](https://www.alphavantage.co/documentation/#balance-sheet) available to you.<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
   {
@@ -98,11 +98,14 @@
    "outputs": [],
    "source": [
     "import json\n",
+    "\n",
     "import requests\n",
     "\n",
     "# Update these two values according to what you are looking for\n",
     "ticker = \"MSFT\"\n",
-    "data_set = \"OVERVIEW\"  # or try 'EARNINGS', 'CASH_FLOW', 'BALANCE_SHEET', 'INCOME_STATEMENT'\n",
+    "data_set = (\n",
+    "    \"OVERVIEW\"  # or try 'EARNINGS', 'CASH_FLOW', 'BALANCE_SHEET', 'INCOME_STATEMENT'\n",
+    ")\n",
     "\n",
     "url = (\n",
     "    \"https://www.alphavantage.co/query?function=\"\n",
