--- a/module-1/lesson-1/Financial_Data_Module_1_Lesson_1.ipynb
+++ b/module-1/lesson-1/Financial_Data_Module_1_Lesson_1.ipynb
@@ -46,7 +46,7 @@
    "source": [
     "*In Financial Markets, we examined how the world of financial engineering is influenced by concepts like credit risk, financing, volatility, correlation, liquidity, regulation, leverage, non-linearity, model failure, and financial crisis. In Financial Data, we will revisit all of these concepts by introducing data to can help us populate models that can interpret, predict, and even prescribe solutions to the challenges financial engineers face.*\n",
     "\n",
-    "*In this module, we will examine what constitutes financial data: where it comes from, the factors that affect data, the types of data, how to handle missing or extreme cases, and the foundations of data preparation for machine learning.* *In this lesson, we'll focus on a half dozen lessons we can make about data, based on understanding the macroeconomy, central banks, and one of the key financial concepts from the last course--liquidity.*"
+    "*In this module, we will examine what constitutes financial data: where it comes from, the factors that affect data, the types of data, how to handle missing or extreme cases, and the foundations of data preparation for machine learning.* *In this lesson, we'll focus on a half dozen lessons we can make about data, based on understanding the macroeconomy, central banks, and one of the key financial concepts from the last course--liquidity.*<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
   {
@@ -108,6 +108,8 @@
    "outputs": [],
    "source": [
     "# Using code from FRED API: Get US Economic Data using Python\n",
+    "\n",
+    "\n",
     "def get_fred_data(param_list, start_date, end_date):\n",
     "    df = pdr.DataReader(param_list, \"fred\", start_date, end_date)\n",
     "    return df.reset_index()"
@@ -240,7 +242,7 @@
    "source": [
     "**References**\n",
     "\n",
-    "* Herrera, Ariel. “FRED API: Get US Economic Data Using Python - Towards Dev.” *Medium*, 30 Mar. 2022, https://towardsdev.com/fred-api-get-us-economic-data-using-python-e51ac8e7b1cc"
+    "* Herrera, Ariel. \"FRED API: Get US Economic Data Using Python - Towards Dev.\" *Medium*, 30 Mar. 2022, https://towardsdev.com/fred-api-get-us-economic-data-using-python-e51ac8e7b1cc"
    ]
   },
   {
