--- a/module-1/lesson-2/Financial_Data_Module_1_Lesson_2.ipynb
+++ b/module-1/lesson-2/Financial_Data_Module_1_Lesson_2.ipynb
@@ -129,7 +129,8 @@
    "source": [
     "**Disclaimer**: \n",
     "`investpy` is not working fine currently due to some changes in [Investing.com](https://www.investing.com/) APIs and author is working to fix it. For the purpose of understanding lesson 2, please visit [Argentina 3-Year Bond Historical Data - Investing.com](https://www.investing.com/rates-bonds/argentina-3-year-bond-yield-historical-data) and download data directly for now. The code will be updated as soon as package update is released.\n",
-    "\n"
+    "\n",
+    "<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
   {
@@ -273,7 +274,7 @@
    "source": [
     "**References**\n",
     "\n",
-    "- Del Canto, Alvaro Bartolome. “Investpy - Financial Data Extraction from Investing.Com with Python.” *Investpy*, GitHub, https://investpy.readthedocs.io/_info/installation.html. Accessed 4 May 2022."
+    "- Del Canto, Alvaro Bartolome. \"Investpy - Financial Data Extraction from Investing.Com with Python.\" *Investpy*, GitHub, https://investpy.readthedocs.io/_info/installation.html. Accessed 4 May 2022."
    ]
   },
   {
