--- a/module-5/lesson-4/Financial_Data_Module_5_Lesson_4.ipynb
+++ b/module-5/lesson-4/Financial_Data_Module_5_Lesson_4.ipynb
@@ -651,13 +651,13 @@
    },
    "source": [
     "## 1. Credit Ratings\n",
-    "As you recall from the Financial Markets course, credit ratings are used for bonds issued by corporations and government entities as well as for asset-backed securities (ABS) and mortgage-backed securities (MBS). The three major global credit rating agencies are Moody’s Investors Service, Standard & Poor’s, and Fitch Ratings. Each provides credit quality ratings for issuers as well as specific issues. These are ordinal ratings focusing on the probability of default.\n",
+    "As you recall from the Financial Markets course, credit ratings are used for bonds issued by corporations and government entities as well as for asset-backed securities (ABS) and mortgage-backed securities (MBS). The three major global credit rating agencies are Moody's Investors Service, Standard & Poor's, and Fitch Ratings. Each provides credit quality ratings for issuers as well as specific issues. These are ordinal ratings focusing on the probability of default.\n",
     "\n",
-    "The credit rating agencies consider the expected loss given default (LGD) by means of **notching**, which is an adjustment to the issuer rating to reflect the priority of claim for specific debt issues of that issuer and to reflect any subordination. The issuer rating is typically for senior unsecured debt. The rating on subordinated debt is then adjusted, or “notched” by lowering it one or two levels - for instance, from A+ down to A or further down to A-. This inclusion of loss given default in addition to the probability of default explains why they are called “credit ratings” and not just “default ratings.”\n",
+    "The credit rating agencies consider the expected loss given default (LGD) by means of **notching**, which is an adjustment to the issuer rating to reflect the priority of claim for specific debt issues of that issuer and to reflect any subordination. The issuer rating is typically for senior unsecured debt. The rating on subordinated debt is then adjusted, or \"notched\" by lowering it one or two levels - for instance, from A+ down to A or further down to A-. This inclusion of loss given default in addition to the probability of default explains why they are called \"credit ratings\" and not just \"default ratings.\"\n",
     "\n",
     "The rating agencies report transition matrices based on their historical data. A transition matrix shows the probability that a rating changes (or stays the same) in one year's time. (The probability that the rating changes to default is the probability of default.)\n",
     "\n",
-    "We can verify the accuracy of the market-implied default probabilities with these rating agencies' transition matrices. Using the code below, we can obtain the Standard & Poor’s Average One-Year Transition Rates For Global Corporates using historical data from 1981-2019 to verify the market-implied default probabilities calculated earlier."
+    "We can verify the accuracy of the market-implied default probabilities with these rating agencies' transition matrices. Using the code below, we can obtain the Standard & Poor's Average One-Year Transition Rates For Global Corporates using historical data from 1981-2019 to verify the market-implied default probabilities calculated earlier."
    ]
   },
   {
@@ -675,7 +675,8 @@
     "id": "ZFqPzuCmYu-P"
    },
    "source": [
-    "To get ready for the graphing below, please make sure you do all the required readings for this lesson and lesson 3.\n"
+    "To get ready for the graphing below, please make sure you do all the required readings for this lesson and lesson 3.\n",
+    "<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
   {
@@ -807,9 +808,9 @@
     "id": "EL3mm25RXuBe"
    },
    "source": [
-    "The above is the Standard & Poor’s 2019 transition matrix. It shows the probabilities of a particular rating transitioning to another over the course of the following year. An A-rated issuer has a 78.88% probability of remaining at that level, a 0.03% probability of moving up to AAA; a 0.22% probability of moving up to AA; an 0.86% probability of moving down to BBB; 0.10% down to BB; 0.02% to B, 0.01% to CCC, CC, or C; and 0.05% to D, where it is in default.\n",
+    "The above is the Standard & Poor's 2019 transition matrix. It shows the probabilities of a particular rating transitioning to another over the course of the following year. An A-rated issuer has a 78.88% probability of remaining at that level, a 0.03% probability of moving up to AAA; a 0.22% probability of moving up to AA; an 0.86% probability of moving down to BBB; 0.10% down to BB; 0.02% to B, 0.01% to CCC, CC, or C; and 0.05% to D, where it is in default.\n",
     "\n",
-    "Using the Selenium script mentioned earlier to retrieve the Standard & Poor’s credit ratings, we can use the corporate bond's credit rating to determine the probability of a particular rating transitioning to D (default) during the next year according to the Standard & Poor’s 2019 transition matrix."
+    "Using the Selenium script mentioned earlier to retrieve the Standard & Poor's credit ratings, we can use the corporate bond's credit rating to determine the probability of a particular rating transitioning to D (default) during the next year according to the Standard & Poor's 2019 transition matrix."
    ]
   },
   {
@@ -873,7 +874,7 @@
     "id": "agqeDDbWXuBe"
    },
    "source": [
-    "It appears that the market-implied probability of default we calculated for the nearest maturity corporate bond is close to the probability of default as determined from the historical data in the Standard & Poor’s 2019 transition matrix."
+    "It appears that the market-implied probability of default we calculated for the nearest maturity corporate bond is close to the probability of default as determined from the historical data in the Standard & Poor's 2019 transition matrix."
    ]
   },
   {
@@ -889,13 +890,13 @@
    "outputs": [],
    "source": [
     "# Compare the nearest maturity Market-implied probability of default with\n",
-    "# the historical probability of default in the Standard & Poor’s 2019 transition matrix\n",
+    "# the historical probability of default in the Standard & Poor's 2019 transition matrix\n",
     "print(\n",
     "    \"Market-implied probability of default = %s\"\n",
     "    % (bond_df_result[\"Probability of Default %\"].iloc[0])\n",
     "    + \"%\"\n",
     ")\n",
-    "print(\"Standard & Poor’s probability of default = %s\" % (sp_transition_dp) + \"%\")"
+    "print(\"Standard & Poor's probability of default = %s\" % (sp_transition_dp) + \"%\")"
    ]
   },
   {
@@ -915,7 +916,7 @@
    "source": [
     "In the example above, the bond valuation techniques using a risk-adjusted discount rate do a reasonably good job of estimating the market-implied default probabilities. We calculated the expected cash flow at each period by adding the product of the default payout and the probability of default ($p$) with the product of the promised payment (coupon payments and repayment of principal) and the probability of not defaulting ($1-p$). One reason for any differences between historical and market-implied default probabilities is that historical default probabilities do not include the default risk premium associated with uncertainty over the timing of possible default loss.\n",
     "\n",
-    "The model used here is very sensitive to the discount and recovery rates selected. For simplicity, we assume a flat government bond yield curve, but it could be upward or downward sloping. A more sophisticated and realistic model of the discount rates would require that they be calculated sequentially by a process known as “bootstrapping.” We also assume in this example that the recovery rate is 40%, but another possibility is to change the assumed recovery rate to either 30% or 60% of exposure. Another simplifying assumption is that recovery is instantaneous. In practice, lengthy time delays can occur between the event of default and eventual recovery of cash. Notice that we assume that the recovery rate applies to interest as well as principal.\n",
+    "The model used here is very sensitive to the discount and recovery rates selected. For simplicity, we assume a flat government bond yield curve, but it could be upward or downward sloping. A more sophisticated and realistic model of the discount rates would require that they be calculated sequentially by a process known as \"bootstrapping.\" We also assume in this example that the recovery rate is 40%, but another possibility is to change the assumed recovery rate to either 30% or 60% of exposure. Another simplifying assumption is that recovery is instantaneous. In practice, lengthy time delays can occur between the event of default and eventual recovery of cash. Notice that we assume that the recovery rate applies to interest as well as principal.\n",
     "\n",
     "Also, we assume that default occurs only on coupon payment dates and that default will not occur on date 0, the current date. Although we assumed the annual default probability is the same each year, this does not need to be the case.\n",
     "\n",
@@ -930,7 +931,7 @@
    "source": [
     "**References**\n",
     "\n",
-    "* Vanderplas, Jake. “04.00-Introduction-To-Matplotlib.ipynb.” *GitHub*, https://github.com/jakevdp/PythonDataScienceHandbook/blob/master/notebooks/04.00-Introduction-To-Matplotlib.ipynb\n",
+    "* Vanderplas, Jake. \"04.00-Introduction-To-Matplotlib.ipynb.\" *GitHub*, https://github.com/jakevdp/PythonDataScienceHandbook/blob/master/notebooks/04.00-Introduction-To-Matplotlib.ipynb\n",
     "* Sargent, Thomas, and John Stachurski. \"10. Matplotlib.\" *Python Programming for Economics and Finance*. https://python-programming.quantecon.org/matplotlib.html.\n",
     "* Coleman, Chase, et al. \"GroupBy.\" *QuantEcon DataScience.* https://datascience.quantecon.org/pandas/groupby.html\n",
     "* The  code and related documentation used in this lesson is adapted from: <br>**Hugh Donnelly, CFA**<br>*AlphaWave Data* <br> **March 2021** under the following  MIT License:\n",
